[tool.poetry]
name = "how-to-use-poetry"
version = "0.1.0"
description = ""
authors = ["hbirru <henok.birru@nokia.com>"]
readme = "README.md"
packages = [{include = "how_to_use_poetry"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"


[tool.poetry-dynamic-versioning]
enable = true
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
